Further refactoring using entitySegments