@@ -3,10 +3,12 @@ package dk.sdu.mmmi.cbse.enemysystem;
 
 import dk.sdu.mmmi.cbse.common.bullet.BulletSPI;
 import dk.sdu.mmmi.cbse.common.data.*;
-import dk.sdu.mmmi.cbse.playersystem.Player;
+import dk.sdu.mmmi.cbse.common.entitysegments.RigidbodySegment;
+import dk.sdu.mmmi.cbse.common.entitysegments.ShootingSegment;
 import dk.sdu.mmmi.cbse.common.services.IEntityProcessingService;
 
 import java.util.Collection;
+import java.util.List;
 import java.util.ServiceLoader;
 
 import static java.util.stream.Collectors.toList;
@@ -17,53 +19,53 @@ public class EnemyControlSystem implements IEntityProcessingService {
     public void process(GameData gameData, World world) {
         for (Entity enemy : world.getEntities(Enemy.class)) {
 
-            //Tick cooldown
-            ((Enemy) enemy).tickFireTimer(gameData.getDeltaSec());
-
+            RigidbodySegment rigidbody = enemy.getSegment(RigidbodySegment.class);
+            ShootingSegment shooting = enemy.getSegment(ShootingSegment.class);
 
             //Movement
             //Find player entity to track
             Entity player = null;
-            if (!world.getEntities(Player.class).isEmpty())
-                player = world.getEntities(Player.class).getFirst();
+            List<Entity> playerEntities = world.getEntitiesWithTag(EntityTag.PLAYER);
+            if (!playerEntities.isEmpty())
+                player = playerEntities.get(0);
 
+            //Rotate towards player
             if (player != null) {
-                //Calculate vector between enemy and player
-                Vector deltaPosition = player.getPosition().subtracted(enemy.getPosition());//Modify velocity using the delta vector and delta time to make the modification consistent across devices
-                enemy.getVelocity().add(deltaPosition.normalized().multiplied(enemy.getRotationSpeed() * gameData.getDeltaSec()));
-                //Normalize the velocity vector
-                enemy.getVelocity().normalize();
+                RigidbodySegment playerRigidbody = player.getSegment(RigidbodySegment.class);
+                if (Vector.dot(rigidbody.getPosition(), playerRigidbody.getPosition()) < 0)
+                    rigidbody.rotate(gameData, -1);
+                else
+                    rigidbody.rotate(gameData, 1);
             }
 
             //Modify the position using the velocity vector, applying both speed and delta time
-            enemy.getPosition().add(enemy.getVelocity().multiplied(enemy.getSpeed() * gameData.getDeltaSec()));
+            rigidbody.process(gameData, enemy);
 
-            //Set graphical rotation to match the direction of the velocity vector
-            enemy.setRotation(enemy.getVelocity().toAngle());
-
+            //Process shooting timer
+            shooting.process(gameData, enemy);
 
             //Fire bullets
-            if (((Enemy) enemy).canFire()) {
+            if (shooting.canFire()) {
                 getBulletSPIs().stream().findFirst().ifPresent(
                         spi -> world.addEntity(spi.createBullet(enemy, gameData, 160, 4f))
                 );
             }
 
             //World border collision
-            if (enemy.getPosition().x < 0) {
-                enemy.getPosition().x = 0;
+            if (rigidbody.getPosition().x < 0) {
+                rigidbody.getPosition().x = 0;
             }
 
-            if (enemy.getPosition().x > gameData.getDisplaySize().x) {
-                enemy.getPosition().x = gameData.getDisplaySize().x - 1;
+            if (rigidbody.getPosition().x > gameData.getDisplaySize().x) {
+                rigidbody.getPosition().x = gameData.getDisplaySize().x - 1;
             }
 
-            if (enemy.getPosition().y < 0) {
-                enemy.getPosition().y = 0;
+            if (rigidbody.getPosition().y < 0) {
+                rigidbody.getPosition().y = 0;
             }
 
-            if (enemy.getPosition().y > gameData.getDisplaySize().y) {
-                enemy.getPosition().y = gameData.getDisplaySize().y - 1;
+            if (rigidbody.getPosition().y > gameData.getDisplaySize().y) {
+                rigidbody.getPosition().y = gameData.getDisplaySize().y - 1;
             }
         }
     }
